--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
 main {
     display: flex;
     flex-direction: column;
+    gap: 1em;
 }
 
 /* HEADER */
@@ -111,26 +112,109 @@ main {
     justify-content: center;
     align-items: center;
     background-image: url(./assets/images/banner-background.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     height: 12em;
     width: 100%;
 }
 
 .banner--text {
-	color: #fff;
-	text-transform: capitalize;
-	font-family: roboto-bold;
-	width: 70%;
-	text-align: center;
+    color: #fff;
+    text-transform: capitalize;
+    font-family: roboto-bold;
+    width: 70%;
+    text-align: center;
 }
 
 @media screen and (min-width: 780px) {
-	.banner {
-		height: 15em;
-	}
-	.banner--text {
-		width: 60%;
-	}
+    .banner {
+        height: 15em;
+    }
+    .banner--text {
+        width: 60%;
+    }
+}
+
+/* ARTICLES */
+.articleContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5em;
+}
+
+.article {
+    display: flex;
+    flex-direction: column;
+    height: 25em;
+    width: 95%;
+    border-radius: 20px 20px 5px 5px;
+    box-shadow: 0px 11px 22px -7px #000000;
+}
+
+.article--image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 65%;
+}
+
+.article--image img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.article--body {
+    height: 35%;
+    background-color: var(--color-primary);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	color: #fff;
+	padding: 1em 1em .5em 1em;
+	border-radius: 0px 0px 5px 5px;
+}
+
+.article--title{
+	font-family: roboto-black;
+	font-size: 1.2em;
+	margin-bottom: .2em;
+}
+
+.article--description {
+	font-family: roboto-regular;
+	font-size: .8em;
+	font-style: italic;
+	margin-bottom: .8em;
+}
+
+.article--rating {
+	display: flex;
+	gap: .2em;
+	margin-bottom: .8em;
+}
+
+.article--rating__stars {
+	display: flex;
+	gap: .2em;
+}
+
+.article--price {
+	font-size: 1.1em;
+}
+
+.article--cta {
+	display: block;
+	text-align: center;
+	border: 2px solid var(--color-quaternary);
+	width: 7em;
+	align-self: flex-end;
+	padding: .4em;
+	text-decoration: none;
+	color: var(--color-quaternary);
+	text-transform: uppercase;
+	border-radius: 5px;
+	font-family: roboto-black;
 }
