--- a/style.css
+++ b/style.css
@@ -54,6 +54,12 @@ main {
     font-size: 1em;
 }
 
+.header--items__single a {
+    color: black;
+    font-weight: bold;
+    text-decoration: none;
+}
+
 .header--img > img {
     width: 4em;
 }
@@ -246,6 +252,49 @@ main {
     font-family: roboto-black;
 }
 
+.kona-bike h1 {
+    color: black;
+    text-align: center;
+    padding-bottom: 0.5em;
+    font-size: 2em;
+    font-family: roboto-bold;
+    margin: 20px;
+}
+
+.kona-info h2 {
+    color: black;
+    font-weight: bold;
+    text-align: start;
+    font-family: roboto-bold;
+    margin: 40px;
+    font-size: 1em;
+}
+
+.kona-info h3 {
+    color: black;
+    font-weight: bold;
+    text-align: start;
+    font-family: roboto-bold;
+    margin: 20px;
+    font-size: 1em;
+}
+
+.kona-info p {
+    color: black;
+    text-align: justify;
+    margin: 20px;
+}
+
+.kona-info ul {
+    list-style-type: disc;
+    margin: 40px;
+}
+
+.kona-info li {
+    margin: 20px 15px;
+    text-align: justify;
+}
+
 @media only screen and (min-width: 501px) {
     .article {
         flex-direction: row;
@@ -352,4 +401,154 @@ main {
         bottom: .5em;
         right: .5em;
     }
+}
+
+/*REVIEWS*/
+.customer-reviews h2 {
+    color: black;
+    font-weight: bold;
+    text-align: start;
+    font-family: roboto-bold;
+    margin: 40px;
+    font-size: 1em;
+}
+.review {
+    background-color: white;
+    padding: 1em;
+    margin: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.review p {
+    margin: 10px;
+    text-align: justify;
+}
+.reviewer {
+    font-style: italic;
+    color: #555;
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.article--rating__stars {
+    display: inline-block;
+}
+
+/*FORMS*/
+.container {
+    width: 350px;
+    margin: 2em auto;
+    padding: 1em;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+
+  h2 {
+    text-align: center;
+    color: #333;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  label {
+    margin-top: 1em;
+    font-size: 1em;
+    color: #333;
+  }
+
+  input,
+  textarea {
+    padding: 0.5em;
+    margin-top: 0.5em;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 100%;
+  }
+
+  button {
+    background-color: #112d4e;
+    color: white;
+    padding: 0.5em 1em;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    margin-top: 1em;
+  }
+
+  button:hover {
+    background-color: #335379;
+  }
+
+.container h2 {
+    color: black;
+    font-family: roboto-bold;
+    margin: 20px;
+    font-size: 1em;
+    text-align: center;
+}
+
+/* FOOTER */
+.footer {
+    background-color:#112d4e;
+    color: white;
+    padding: 20px;
+    margin-top: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.footer--items {
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+    padding: 0;
+}
+
+.footer--items__single-text {
+    cursor: pointer;
+    position: relative;
+    text-align: center;
+}
+
+.footer--items__single {
+    text-align: center;
+    position: relative;
+    cursor: pointer;
+}
+
+.footer--items__single img {
+    border-radius: 50%;
+    border: 2px solid #fff;
+}
+
+.footer--items__single-text:hover::after {
+    border-bottom: 2px solid white;
+    bottom: -5px;
+    content: "";
+    left: 0;
+    position: absolute;
+    right: 0;
+}
+
+.footer--social-items {
+    list-style: none;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.social-icon img {
+    width: 30px;
+    height: 30px;
+}
+
+.social-icon {
+    margin: 0 10px;
 }
